
[project]
name = "monitoringplugin"
version = "0.1.0"
description = "Class library for writing Nagios (Icinga) plugins"
authors = [
    { name = "Christian Kauhaus", email = "kc@flyingcircus.io" }
]
maintainers = [
    { name = "Matthew Pounsett", email = "matt@conundrum.com" }
]
readme = "README.txt"
license = { text = "ZPL-2.1" }
keywords = ["Nagios", "Icinga", "plugin", "check", "monitoring"]
requires-python = ">= 3.9"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Plugins',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Monitoring',
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
]

[project.urls]
Documentation = "https://monitoringplugin.readthedocs.io/"
Download = "https://pypi.org/project/monitoringplugin/"
Source = "https://github.com/mpounsett/monitoringplugin"
Issues = "https://github.com/mpounsett/monitoringplugin/issues"
Changelog = "https://github.com/mpounsett/monitoringplugin/blob/main/HISTORY.txt"
